--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
   </head>
   <body> 
     <include src="home.html"></include>      
-    <script type="module" src="app.js"></script> 
+    <script type="module" src="app.js"></script>
+    <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script>
+        function googleTranslateElementInit(){
+            new google.translate.TranslateElement(
+                {pageLanguage: 'tr'},
+                'google_translate_element'
+            );
+        }
+    </script> 
   </body>
 </html>                         
