--- a/src/navbar.html
+++ b/src/navbar.html
@@ -29,6 +29,7 @@
         </svg>
      </label>
     </span>
+    <script type="module" src="app.js"></script>
      <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script>
         function googleTranslateElementInit(){
