--- a/src/contact.html
+++ b/src/contact.html
@@ -2,7 +2,8 @@
 <html lang="tr">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recobag</title>
     <link rel="stylesheet" href="styles.scss" />
     <script src="https://kit.fontawesome.com/dcc5353d4a.js" crossorigin="anonymous"></script>
   </head>
