--- a/src/products.html
+++ b/src/products.html
@@ -2,7 +2,8 @@
 <html lang="tr">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recobag</title>
     <link rel="stylesheet" href="flexiblegs.scss">
     <link rel="stylesheet" href="styles.scss" />
   </head>
@@ -11,7 +12,7 @@
 
       <include src="navbar.html"></include>
       
-      <div class="container wrap col xl-flexbox xl-top xl-between">
+      <div class="container wrap col xl-flexbox xl-top xl-between md-center">
         
         <div class="product_overview">
           <a href="product_info_black.html">
