--- a/src/about_us.html
+++ b/src/about_us.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="styles.scss">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <include src="navbar.html"></include>
 <section id="about_us">
     <div class="about_us_bg">
