--- a/src/product_info_blue.html
+++ b/src/product_info_blue.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <link rel="stylesheet" href="styles.scss">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Blue Suitcases</title>
 	
