--- a/src/product_info_orange.html
+++ b/src/product_info_orange.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.scss">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Orange Suitcases</title>
 	
